<resources>
    <string name="app_name">Optiontown</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_api_key">AIzaSyBYWb08BJNsyOLiOgWBprQzVBm_fcwV7k4</string>
    <string name="string_create_my_account">Create My Account</string>
    <string name="string_login">Login</string>
    <string name="string_change_country">Change Country</string>
    <string name="string_India">India</string>
    <string name="string_buy_flight_options">Buy Flight Options</string>
    <string name="string_upgrade">Upgrade</string>
    <string name="string_flight_pass">Flight Pass</string>
    <string name="string_pay_less">Ply less, Fly More</string>
    <string name="string_empty_seat">Empty Seat</string>
    <string name="string_preferred_seat">Preferred Seat</string>
    <string name="string_xtra_baggage">Xtra Baggage</string>
    <string name="string_lounge_access">Lounge Access</string>
    <string name="string_get_luxury_of_business_longue">Get luxury of Business Longue</string>
    <string name="string_flexibility_reward">Flexibility Reward</string>
    <string name="string_earn_rewards_for_your_travel_flexibility">Earn rewards for your travel flexibility!</string>
    <string name="string_preferred_flight">Preferred Flight</string>
    <string name="string_fly_on_your_preferred_flight">Fly on your preferred flight</string>
    <string name="string_multiple_booking">Multiple Booking</string>
    <string name="string_priority_handling">Priority Handling</string>
    <string name="string_freedom_to_choose_flight_later">Freedom to choose flight later</string>
    <string name="string_feel_like_vip_at_airport">Feel like VIP at Airport! </string>
    <string name="string_my_flightpass">My FlightPass</string>
    <string name="string_book_flight">Book Flight</string>
    <string name="string_buy_flight_pass">Buy Flight Pass</string>
    <string name="string_redeem_book">Redeem / Book</string>
    <string name="string_fly_more_pay_less_up_to_50_off">Fly more, pay less (up to 50% off)</string>
    <string name="string_save_up_to_50_on_flight_costs_no_need_to_worry_about_fare_increase_as_your_low_fare_is_locked_in">Save up to 50% on flight costs. No need to worry about fare increase as your low fare is locked-in</string>
    <string name="string_pool_and_share">Pool and Share</string>
    <string name="string_share_your_flight_pass_with_friends_family_or_colleagues">Share your flight pass with friends, family or colleagues</string>
    <string name="string_personalized_for_you">Personalized for you</string>
    <string name="string_customize_your_favorite_destinations_number_of_flights_number_of_users_travel_period_etc_to_suit_your_needs">Customize your favorite destinations, Number of Flights, number of users, Travel Period, etc. to suit your needs</string>
    <string name="string_peace_of_mind">Peace of mind</string>
    <string name="string_make_your_booking_amp_travel_experience_more_convenient_and_relaxed_save_time_and_effort_in_searching_flight_deals"><![CDATA[Make your booking #& travel experience more convenient and relaxed. Save time and effort in searching flight deals.]]></string>
    <string name="string_book_last_available_seat">Book last available seat</string>
    <string name="string_enjoy_the_luxury_to_book_any_flight_till_the_last_available_seat_subject_to_your_advance_booking_limit_no_hidden_restrictions_or_fees">Enjoy the luxury to book any flight till the last available seat subject to your Advance Booking limit. No hidden restrictions or fees.</string>
    <string name="string_more_vacations_more_family_trips_more_savings">More vacations, more family trips, more savings</string>
    <string name="string_cheapest_yet_most_convenient_way_to_travel_more_and_more_for_fun_or_pleasure">Cheapest, yet most convenient way to travel more and more for fun or pleasure.</string>
    <string name="string_pay_only_20_and_rest_later">Pay only 20% and rest later</string>
    <string name="string_just_pay_20_upfront_and_rest_later_in_easy_installments">Just pay 20% upfront and rest later in easy installments</string>
    <string name="string_most_cost_efficient_way_for_business_travel">Most cost efficient way for business travel</string>
    <string name="string_book_flights_at_last_minute_manage_travel_online_share_flight_pass_across_all_employees_and_earn_maximum_savings">Book flights at last minute, manage travel online, share flight pass across all employees and earn maximum savings.</string>
    <string name="string_learn_about_flight_pass">Learn about Flight Pass</string>
    <string name="string_flight_pass_benefits">Flight Pass Benefits</string>
    <string name="string_flight_pass_option_fly_more_pay_less_up_to_75_off">Flight Pass Option - Fly more, pay less (up to 75% off)!</string>
    <string name="string_flight_pass_allows_you_to_conveniently">Flight Pass allows you to conveniently </string>
    <string name="string_pre_purchase_a_number_of_flights_at_an_agreed_low_price_and_enjoy_the_privilege_of_booking_flights_later_as_per_your_need_the_more_credits_you_buy_the_cheaper_it_gets">pre-purchase a Number of Flights at an agreed LOW PRICE and enjoy the privilege of booking flights later as per your need. The more credits you buy, the cheaper it gets.</string>
    <string name="string_8226_cheapest_flights_up_to_75_off_no_more_fare_increase_as_your_flight_pass_low_fare_is_locked_in_book_even_peak_period_flights_at_low_price">• Cheapest Flights (up to 75% off). No more fare increase as your Flight Pass LOW fare is locked-in. Book even peak period flights at low price!</string>
    <string name="string_8226_no_blackout_dates_no_hidden_fees_or_restrictions_no_surcharges_or_additional_fees_fly_on_any_date_no_restrictions_on_trip_duration">• No blackout dates. No hidden fees or restrictions. No surcharges or additional fees. Fly on any date. No restrictions on trip duration.</string>
    <string name="string_8226_book_flight_till_the_last_available_seat_subject_to_your_advance_booking_limit_minimum_days_before_travel_you_must_book_and_travel_period">• Book flight till the last available seat subject to your Advance Booking limit (minimum days before travel you must book) and Travel Period.</string>
    <string name="string_8226_customize_flight_pass_to_suit_your_needs_number_of_flights_destinations_to_fly_to_travel_period_users_who_can_book_and_fly_etc">• Customize Flight Pass to suit your needs; Number of Flights, destinations to fly to, Travel Period, users who can book and fly etc.</string>
    <string name="string_8226_pay_only_20_upfront_and_rest_later_with_easy_installments">• Pay only 20% upfront and rest later with easy installments.</string>
    <string name="string_8226_pool_and_share_your_flight_pass_with_friends_family_or_colleagues">• Pool and share your Flight Pass with friends, family or colleagues</string>
    <string name="string_8226_a_great_travel_solution_for_both_leisure_and_business_travel">• A great travel solution for both leisure and business travel.</string>
    <string name="string_with_flight_pass_you_can_fly_more_pay_up_to_50_less_save_time_and_effort_in_trip_planning_and_booking_and_enhance_your_travel_convenience">With Flight Pass, you can Fly more, Pay up to 50% less, save time and effort in trip planning and booking and enhance your travel convenience!</string>
    <string name="string_read_more">Read more...</string>
    <string name="string_8226_visit_www_optiontown_com_and_select_the_flight_pass_option_tab">• Visit www.optiontown.com and select the Flight Pass Option tab.</string>
    <string name="string_8226_in_the_search_section_choose_your_desired_flight_pass_features_airline_cabin_travel_period_destinations_you_want_to_fly_to_and_number_of_users_and_click_search">• In the search section, choose your desired Flight Pass features (Airline, Cabin, Travel Period, destinations you want to fly to and Number of Users) and click search.</string>
    <string name="string_8226_choose_your_desired_flight_pass_click_on_customise_if_you_want_to_customise_your_flight_pass">• Choose your desired Flight Pass. Click on \'Customise\' if you want to customise your Flight Pass.</string>
    <string name="string_8226_review_and_make_the_payment_you_may_also_choose_a_flexible_payment_plan_with_easy_instalments">• Review and make the payment. You may also choose a Flexible Payment Plan with easy instalments</string>
    <string name="string_now_you_are_ready_to_make_your_bookings_as_per_your_flight_pass">Now, you are ready to make your bookings as per your Flight Pass.</string>
    <string name="string_8226_visit_www_optiontown_com_and_select_the_flight_pass_option_tab_in_the_book_flights_section_enter_your_username_and_password_to_login_to_your_account">• Visit www.optiontown.com and select the Flight Pass Option tab. In the Book Flights section, enter your username and password to login to your account.</string>
    <string name="string_8226_choose_the_flight_pass_you_want_to_use_to_book_flights">• Choose the flight pass you want to use to book flights.</string>
    <string name="string_8226_input_flight_search_criteria_and_click_search">• Input flight search criteria and click search.</string>
    <string name="string_8226_select_your_desired_flight_from_the_search_results">• Select your desired flight from the search results.</string>
    <string name="string_8226_add_users_and_review_your_flight_selection">• Add Users and review your flight selection.</string>
    <string name="string_8226_pay_your_intalment_if_your_flight_pass_was_purchased_with_an_instalment_plan">• Pay your intalment if your flight Pass was purchased with an instalment plan.</string>
    <string name="string_8226_submit_your_booking">• Submit your booking.</string>
    <string name="string_8226_receive_your_booking_confirmation_email_as_per_the_specification_in_your_flight_pass">• Receive your booking confirmation email as per the specification in your Flight Pass.</string>
    <string name="string_8226_about_flight_pass_option">• About Flight Pass Option</string>
    <string name="string_8226_pass_purchase">• Pass Purchase</string>
    <string name="string_8226_pass_redeem_book_flight">• Pass Redeem / Book Flight</string>
    <string name="string_8226_payment">• Payment</string>
    <string name="string_how_can_i_purchase_flight_pass">How Can I Purchase Flight Pass?</string>
    <string name="string_how_can_i_book_flights_with_my_flight_pass">How can I book flights with my Flight Pass?</string>
    <string name="string_frequently_asked_questions_faqs">Frequently Asked Questions (FAQs)</string>
    <string name="string_testimonials">Testimonials</string>
    <string name="string_menu_flight_pass_home">Flight Pass Home</string>
    <string name="string_menu_buy_flight_pass">Buy Flight Pass</string>
    <string name="string_menu_redeem_book">Redeem / Book</string>
    <string name="string_menu_learn_more">Learn More</string>
    <string name="string_menu_faqs">FAQs</string>
    <string name="string_flight_pass_option">Flight Pass Option</string>
    <string name="string_flight_pass_buy">Buy Flight Pass</string>
    <string name="string_select_flight_pass">Select Flight Pass</string>
    <string name="string_filter_your_results">Filter Your Results</string>
    <string name="string_review">Review</string>
    <string name="string_flight_pass_summary">Flight Pass Summary</string>
    <string name="string_make_payment">Make Payment</string>
    <string name="string_create_optiontown_account">Create Optiontown account</string>
    <string name="string_how_does_it_work">How does it work ?.</string>
    <string name="enter_captcha">Enter Captcha</string>
    <string name="captcha">Captcha</string>
    <string name="captcha_case_sensitive">*Captcha is case sensitive</string>
</resources>